data/derived/fa15/progs/unify/prog3126.ml.out
Characters 65-67:
  if c' then wwhile b' c'
                    ^^
Error: This expression has type 'a but an expression was expected of type
         ('b -> 'a * bool) * 'b
       The type variable 'a occurs inside ('b -> 'a * bool) * 'b
